# dbt-data-quality-demo

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
.github/workflows/: alert.yml
macros/sis/: app__data_quality_score.py  app__test_coverage.py  app__today_issues.py  sis_deploy__data_quality_score.sql  sis_deploy__test_coverage.sql  sis_deploy__today_issues.sql
misc/: alert.profiles.yml  dev.profiles.yml  sample.profiles.yml  snowflake.init.sql
models/example/: my_first_dbt_model.sql  schema.yml
models/marts/: customers.sql  customers.yml  orders.yml  schema.yml
tests/: my_first_singular_test.sql  my_second_singular_test.sql
